--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
     <title>Signup Form</title>
 </head>
 <body>
@@ -20,26 +21,28 @@
                 Sign up <em>now</em> to get started.<br><br>You <em>know</em> you want to.
             </span>
         </div>
+        <div class="table-wrapper">
         <table>
             <form id="signup" method="POST" action="mailto:sam.berg2@gmail.com" enctype="text/plain">
-                <legend>Let's do this</legend>
-                <tr><td><label for="fname">First Name:</label>
+                <legend style="margin: 15px 0 10px 20px">Let's do this!</legend>
+                <tr><td><label for="fname">FIRST NAME</label>
                 <input type="text" name="name" id="fname" size="30"></td>
-                <td><label for="lname">Last Name:</label>
+                <td><label for="lname">LAST NAME</label>
                 <input type="text" name="name" id="lname" size="30"></td>
-                <tr><td><label for="email">Email:</label>
+                <tr><td><label for="email">EMAIL</label>
                 <input type="email" name="email" id="email" size="30"></td>
-                <td><label for="phone">Phone Number:</label>
-                <input type="text" name="phone" id="phone" size="15" maxlength="11" minlength="10"></td></tr>
-                <tr><td><label for="pw">Password:</label>
-                <input type="password" name="pw" id="pw" size="20"></td>
-                <td><label for="conf-pw">Confirm Password:</label>
-                <input type="password" name="pw" id="conf-pw" size="20"></td></tr>
+                <td><label for="phone">PHONE NUMBER</label>
+                <input type="text" name="phone" id="phone" size="30" maxlength="11" minlength="10"></td></tr>
+                <tr><td><label for="pw">PASSWORD</label>
+                <input type="password" name="pw" id="pw" size="30"></td>
+                <td><label for="conf-pw">CONFIRM PASSWORD</label>
+                <input type="password" name="pw" id="conf-pw" size="30"></td></tr>
             </form>
         </table>
+        </div>
         <div class="btn-area">
             <button type="submit" form="signup">Create Account</button>
-            <p>Already have an account? <a href="#">Log in</a></p>
+            <p style="margin-left: 5%;">Already have an account? <a href="#">Log in</a></p>
         </div>
             
         
