finalized html and css

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
                     <input class="pass" type="password" name="pw2" id="conf-pw" size="30" required></td></tr>
                 </form>
             </table>
+            <p id="message" style="font-size: 1.4rem; color: red; margin: 0 0 15px 5%;">Passwords do not match!</p>
         </div>
         <div class="btn-area">
-            <button id="submit" type="submit" form="signup">Create Account</button>
+            <button id="submit" type="button" form="signup">Create Account</button>
             <p style="margin-left: 5%;">Already have an account? <a href="#">Log in</a></p>
         </div>
     </div>
